--- a/Patient/templates/patient/detail2.html
+++ b/Patient/templates/patient/detail2.html
@@ -5,7 +5,24 @@
 {% block title %}ข้อมูลผู้ป่วย{% endblock %}
 
 {% block content %}
-<style>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+<style scoped>
+@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,200;1,100&family=Sarabun:ital,wght@0,200;1,200&display=swap');
+
+.container {
+  font-family: 'Sarabun', sans-serif;
+  font-size : medium;
+  padding : 10px;
+  line-height : 40px;
+
+}
+
 .section-title h3 {
   font-size: 24px;
   font-weight: bold;
@@ -26,68 +43,95 @@
   left: 0;
 }
 
-.section-title h4 {
-  font-size: 20px;
+.section-title2 h3 {
+  font-size: 24px;
   font-weight: bold;
-  margin-bottom: 10px;
-  padding-bottom: 8px;
+  margin-bottom: 20px;
+  padding-bottom: 10px;
   position: relative;
   color: #173b6c;
 }
 
-.section-title h4::after {
+.section-title2 h3::after {
   content: '';
   position: absolute;
   display: block;
   width: 600px;
   height: 3px;
-  background: #149ddd;
+  background: #e6d600;
   bottom: 0;
   left: 0;
 }
 
+.section-title3 h3 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+  position: relative;
+  color: #173b6c;
+}
+
+.section-title3 h3::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 600px;
+  height: 3px;
+  background: #e60000;
+  bottom: 0;
+  left: 0;
+}
+
+
 </style>
+
+<div class="section-title">
+  <h3>{{ Patient.FullName }}</h3>
+</div>
+
 <div class="container">
-    <div class="section-title">
-        <h3>{{ Patient.FullName }}</h3>
+  <div class="row">
+    <div class="col">
+      <ul>              
+        <li><i class="d-flex"></i> <strong>ผู้บันทึก:</strong> <span>{{ Patient.DataUser.FullName }} <strong>เมื่อวันที่</strong> {{ Patient.Date|thaidate:"D d M Y" }}</span></li>
+        <li><i class="d-flex"></i> <strong>เพศ:</strong> <span>{{ Patient.Gender }}</span></li>
+        <li><i class="d-flex"></i> <strong>เลขบัตรประชาชน:</strong> <span>{{ Patient.PersonID }}</span></li>
+        <li><i class="d-flex"></i> <strong>หมายเหตุ:</strong> <span>Comment : {{ Patient.Comment }}<br></span></li>
+      </ul>
     </div>
+    <div class="col">
+      <ul>
+        <li><i class="bi bi-chevron-right"></i> <strong>วันเกิด:</strong> <span>{{ Patient.BirthDay }} ({{ Patient.Age }})</span></li>
+        <li><i class="bi bi-chevron-right"></i> 
+            {% if Patient.IsAirforce %} 
+                <strong>เป็นข้าราชการกองทัพอากาศ:</strong> <span>{{ Patient.Office }}</span></li>
+            {% else %}
+                <strong>ไม่เป็นข้าราชการกองทัพอากาศ:</strong> <span>{{ Patient.Office }}</span></li>
+            {% endif %}
+        <li><i class="bi bi-chevron-right"></i> <strong>ที่อยู่ปัจจุบัน :</strong> <span>{{ Patient.Address }}</span></li>
+        <li><i class="bi bi-chevron-right"></i> <strong>เบอร์มือถือ : </strong> <span>{{ Patient.Mobile }}</span> <strong>เบอร์ฉุกเฉิน : </strong> <span>{{ Patient.EmergencyMobile }}</span></li>
+      </ul>
+    </div>    
+  </div>
+</div>
 
-    <div class="row">
-        <div class="col-lg-6">
-            <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>ผู้บันทึก:</strong> <span>{{ Patient.DataUser.FullName }} <strong>เมื่อวันที่</strong> {{ Patient.Date|thaidate:"D d M Y" }}</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>เพศ:</strong> <span>{{ Patient.Gender }}</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>เลขบัตรประชาชน:</strong> <span>{{ Patient.PersonID }}</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>หมายเหตุ:</strong> <span>Comment : {{ Patient.Comment }}<br></span></li>     
-            </ul>
-        </div>
-        <div class="col-lg-6">
-            <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>วันเกิด:</strong> <span>{{ Patient.BirthDay }} ({{ Patient.Age }})</span></li>
-                <li><i class="bi bi-chevron-right"></i> 
-                    {% if Patient.IsAirforce %} 
-                        <strong>เป็นข้าราชการกองทัพอากาศ</strong> <span>{{ Patient.Office }}</span></li>
-                    {% else %}
-                        <strong>ไม่เป็นข้าราชการกองทัพอากาศ</strong> <span>{{ Patient.Office }}</span></li>
-                    {% endif %}
-                <li><i class="bi bi-chevron-right"></i> <strong>ที่อยู่ปัจจุบัน :</strong> <span>{{ Patient.Address }}</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>เบอร์มือถือ : </strong> <span>{{ Patient.Mobile }}</span> <strong>เบอร์ฉุกเฉิน : </strong> <span>{{ Patient.EmergencyMobile }}</span></li>
-            </ul>
-        </div>
-    </div>
-
-          ชื่อคนแพร่เชื้อ: {{ Patient.InfectiousName }}<br>
-         
-          วันที่ตรวจพบเชื้อ : {{ Patient.DatePositive }}<br>
-
-          Corona3 : 
+<div class="container"> 
+  <div class="section-title2">
+    <h3>1</h3>
+  </div>
+    <div class="col">
+        <ul>  
+          <strong>ชื่อคนแพร่เชื้อ:</strong>{{ Patient.InfectiousName }}<br>         
+          <strong>วันที่ตรวจพบเชื้อ :</strong> {{ Patient.DatePositive }}<br>
+          <strong>Corona3 : </strong>
             {% if Patient.Corona3 %}
               <a href = "{% get_media_prefix %}{{ Patient.Corona3 }}" target = "_blank" class="btn  btn-sm btn-primary">openfile </a>
             {% else %}
               -
             {% endif %}
           <br>
-          DetectedResult : 
+          <strong>DetectedResult :</strong>
             {% if Patient.DetectedResult %}
               <a href = "{% get_media_prefix %}{{ Patient.DetectedResult }}" target = "_blank" class="btn  btn-sm btn-primary">openfile </a>
             {% else %}
@@ -95,33 +139,41 @@
             {% endif %}
           <br>
 
-          ConfirmUser : {{ Patient.ConfirmUser }}<br>
-          ConfirmedPatient : {{ Patient.ConfirmedPatient }}<br>
-          
-
+          <strong>ConfirmUser :</strong> {{ Patient.ConfirmUser }}<br>
+          <strong>ConfirmedPatient :</strong> {{ Patient.ConfirmedPatient }}<br>
+        </ul>
+   </div>
 </div>
-<div class = "container">
-  <form method = 'POST'>
-      {% csrf_token %}
-      <div class = "row">      
-        <div class = "col-6">
-          <b>สถานะผู้ป่วย</b> <br>
-          {% for status in StatusList %}
-            {{status.Date}} ,  {{status.RecorderUser}}, {{status.get_Status_display}} , {{status.Comment}} <br>
-          {% endfor %}
-          {{ status_log_form }}
-        </div>
-          <div class = "col-6">
-        <b>การรักษาผู้ป่วย</b> <br>
-        {% for treatment in TreatmentList %}
-          {{treatment.Date}} ,  {{treatment.RecorderUser}}, {{treatment.get_Treatment_display}} , {{treatment.Comment}} <br>
-        {% endfor %}
-        {{ treatment_log_form }}
-        </div>
 
-      </div>
-    <input class="btn btn-primary" type="submit" value="Submit">
-  </form>
+
+
+<div class = "container">
+  <div class="section-title3">
+    <h3>2</h3>
+  </div>
+  <div class="col">
+    <form method = 'POST'>
+        {% csrf_token %}
+        <div class = "row">      
+          <div class = "col-6">
+            <b>สถานะผู้ป่วย</b> <br>
+            {% for status in StatusList %}
+              <li style="background-color:aquamarine;">{{status.Date}} ,  {{status.RecorderUser}}, {{status.get_Status_display}} , {{status.Comment}} <br></li>
+            {% endfor %}
+            {{ status_log_form }}
+          </div>
+            <div class = "col-6">
+          <b>การรักษาผู้ป่วย</b> <br>
+          {% for treatment in TreatmentList %}
+          <li style="background-color: #149ddd;">{{treatment.Date}} ,  {{treatment.RecorderUser}}, {{treatment.get_Treatment_display}} , {{treatment.Comment}} <br></li>
+          {% endfor %}
+          {{ treatment_log_form }}
+          </div>
+
+        </div>
+      <input class="btn btn-primary" type="submit" value="Submit">
+    </form>
+  </div>
 </div>
 
 
